# golubator_tgbot

./: .env.sample  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yaml  pyproject.toml
docs/: call_survey.md
migrations/: env.py
migrations/versions/: 2025_12_08_1830-c49808eecebd_init_migrations.py  2025_12_08_2113-ae7bd9120402_init_migrations.py  2025_12_15_1225-435ea526d448_add_name_for_rules.py  2025_12_15_1300-add_last_sent_at_to_state_rules.py  2025_12_16_0000_add_cohort_rules.py  2026_02_18_0100-add_meeting_survey.py  2026_02_19_0000_add_calls.py
redisdata/: dump.rdb
src/: celery_app.py  main.py
src/api/: dependencies.py  main.py
src/api/routes/: survey.py
src/api/schemas/: survey.py
src/bot/callback/: user.py
src/bot/callbacks/: cohort.py  mailing.py  meeting.py  rule.py  update_user.py
src/bot/filters/: role_filter.py
src/bot/handlers/: mailings.py  meeting.py  user.py
src/bot/keyboards/: cohort.py  mailings.py  meeting.py  menu.py  user.py
src/bot/routers/: start.py
src/bot/states/: create_cohort.py  mailing.py  mailings.py  meeting.py  update_user.py
src/core/: config.py  dao.py  database.py
src/dao/: call.py  cohort.py  meeting.py  rule.py  survey.py  user.py
src/models/: __init__.py  call.py  cohort.py  meeting.py  notification.py  rule.py  survey.py  user.py
src/scripts/: api_server.py  celery_beat.py  celery_worker.py
src/services/: survey.py
src/survey/: constants.py
src/tasks/: meeting.py  notification.py
src/utils/: auth.py  onboarding.py
tests/: test_call_survey_api.py
(+7 files in other folders)
