[project]
name = "golubator-tgbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry Golub",email = "gosest4@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "aiogram (>=3.23.0,<4.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "celery (>=5.6.0,<6.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "ruff (>=0.14.8,<0.15.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "greenlet (>=3.3.0,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "celery-types (>=0.24.0,<0.25.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
